# everruns

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  cliff.toml  commitlint.config.js  deny.toml  package.json
crates/cli/: Cargo.toml
crates/cli/src/: client.rs  main.rs  output.rs
crates/cli/src/commands/: agents.rs  capabilities.rs  chat.rs  mod.rs  sessions.rs
crates/control-plane/: Cargo.toml  Dockerfile  README.md
crates/control-plane/examples/: dad_joke_agent.rs
crates/control-plane/migrations/: 001_base_schema.sql  002_durable_execution.sql  002_remove_tool_call_from_index.sql  003_default_providers.sql  005_add_llmsim_provider_type.sql  006_add_event_context_ts.sql  006_durable_execution_tables.sql  007_update_session_status.sql  008_durable_execution_tables.sql
crates/control-plane/src/: agents.rs  capabilities.rs  events.rs  grpc_service.rs  lib.rs  llm_models.rs  llm_providers.rs  main.rs  messages.rs  openapi.rs  session_files.rs  sessions.rs  users.rs
crates/control-plane/src/api/: agents.rs  capabilities.rs  common.rs  events.rs  llm_models.rs  llm_providers.rs  messages.rs  (+5 more)
crates/control-plane/tests/: integration_test.rs
crates/core/: Cargo.toml
crates/core/examples/: turn_based_execution.rs
crates/core/src/: capability_types.rs  event_listeners.rs  events.rs  lib.rs  llm_driver_registry.rs  llm_model_profiles.rs  llm_models.rs  llmsim_driver.rs  memory.rs  message.rs  openai_protocol.rs  otel_listener.rs  session.rs  telemetry.rs  tool_types.rs  traits.rs
crates/core/tests/: reason_atom_test.rs
crates/durable/: Cargo.toml
crates/durable/benches/: concurrent_workers.rs  task_claiming.rs  workflow_throughput.rs
crates/durable/src/: lib.rs
crates/durable/tests/: postgres_integration_test.rs
crates/everruns-agent-loop/: Cargo.toml
crates/everruns-agent-loop/examples/: capabilities.rs  mock_demo.rs  simple_loop.rs  tool_calling.rs  tool_demo.rs
crates/everruns-agent-loop/src/: capabilities.rs  config.rs  events.rs  executor.rs  lib.rs  message.rs  tools.rs
crates/everruns-agent-loop/tests/: tool_calling_test.rs
crates/everruns-anthropic/: Cargo.toml
crates/everruns-anthropic/src/: driver.rs  lib.rs  provider.rs  tests.rs
crates/everruns-api/: Cargo.toml  Dockerfile  README.md
crates/everruns-api/examples/: create_agent.rs  create_harness.rs  durable_events.rs
crates/everruns-api/src/: agents.rs  agui.rs  capabilities.rs  common.rs  events.rs  grpc_service.rs  harnesses.rs  llm_models.rs  llm_providers.rs  main.rs  messages.rs  runs.rs  session_files.rs  sessions.rs  threads.rs  users.rs
crates/everruns-api/tests/: integration_test.rs
crates/everruns-core/: Cargo.toml
crates/everruns-core/examples/: capabilities.rs  decomposed_execution.rs  protocol_agent.rs  simple_agent.rs  task_list.rs  tool_calling.rs  turn_based_execution.rs
crates/everruns-core/src/: ag_ui.rs  agent.rs  anthropic.rs  atoms.rs  capabilities.rs  capability_dto.rs  capability_types.rs  config.rs  driver_factory.rs  error.rs  event.rs  events.rs  executor.rs  known_model_profiles.rs  lib.rs  llm.rs  llm_driver_registry.rs  llm_drivers.rs  llm_entities.rs  llm_models.rs  loop.rs  memory.rs  message.rs  model_profile_types.rs  model_profiles.rs  openai.rs  openai_protocol.rs  protocol.rs  provider_factory.rs  runtime_agent.rs  session.rs  session_file.rs  step.rs  tool_types.rs  tools.rs  traits.rs
crates/everruns-core/tests/: tool_calling_test.rs
crates/everruns-observability/: Cargo.toml
crates/everruns-observability/src/: backend.rs  config.rs  emitter.rs  langfuse.rs  lib.rs
crates/everruns-openai/: Cargo.toml
crates/everruns-openai/src/: driver.rs  lib.rs  provider.rs  tests.rs  types.rs
crates/everruns-storage/: Cargo.toml
crates/everruns-storage/migrations/: 001_initial_schema.sql  002_agent_capabilities.sql  002_llm_providers.sql  003_agent_session_messages.sql  003_authentication.sql  003_harness_session_events.sql  003_update_event_indexes.sql  004_add_event_metadata_tags.sql  004_agent_session_messages.sql  004_test_capabilities.sql  005_remove_capability_check_constraint.sql  006_message_metadata.sql  006_refactor_llm_providers.sql  006_unique_agent_name.sql  007_refactor_llm_providers.sql  008_add_model_profile.sql  008_remove_tool_call_id.sql  009_add_controls_column.sql  010_message_status.sql  010_remove_context_window.sql  010_session_files.sql  012_update_llm_default_logic.sql  013_add_message_events_index.sql  014_drop_messages_table.sql
crates/everruns-storage/src/: adapters.rs  agent_store.rs  encryption.rs  event_emitter.rs  lib.rs  llm_provider_store.rs  message_store.rs  models.rs  repositories.rs  session_file_store.rs  session_store.rs
crates/everruns-worker/: Cargo.toml  Dockerfile
crates/everruns-worker/examples/: agent_workflow_demo.rs  openai_agent.rs  openai_tools.rs  session_workflow_v2_demo.rs  tool_calling.rs  v2_basic.rs  v2_interactive.rs  v2_tools.rs  v3_loop.rs
crates/everruns-worker/src/: activities.rs  activities_temporal.rs  adapters.rs  agent_workflow.rs  client.rs  executor.rs  lib.rs  main.rs  runner.rs  runner_inprocess.rs  runner_temporal.rs  session_workflow.rs  temporal_activities.rs  temporal_client.rs  temporal_runner.rs  temporal_worker.rs  tools.rs  types.rs  unified_tool_executor.rs  worker.rs  workflow_registry.rs  workflow_traits.rs  workflows.rs  workflows_temporal.rs
crates/internal-protocol/: Cargo.toml  build.rs
crates/internal-protocol/proto/: worker.proto
crates/internal-protocol/src/: lib.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: error.rs  lib.rs  traits.rs
crates/schemas/: Cargo.toml
crates/schemas/src/: agent.rs  capability_dto.rs  capability_types.rs  events.rs  lib.rs  llm_models.rs  message.rs  session.rs  session_file.rs  tool_types.rs
crates/worker/: Cargo.toml
crates/worker/src/: activities.rs  adapters.rs  client.rs  durable_runner.rs  durable_worker.rs  grpc_adapters.rs  grpc_durable_store.rs  lib.rs  main.rs  runner.rs  turn_workflow.rs  types.rs  worker.rs
(+418 files in other folders)
