# Decision: Use UUID v7 for time-ordered IDs (better for DB indexing, sortable by creation time)
# Decision: OpenAI as first LLM provider (most common, stable API)
# Decision: Auth via OAuth will be added later for dashboard login

[workspace]
resolver = "2"

members = [
    "crates/everruns-api",
    "crates/everruns-worker",
    "crates/everruns-contracts",
    "crates/everruns-storage",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Everruns Contributors"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.42", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"

# HTTP framework
axum = { version = "0.7", features = ["macros"] }
axum-extra = { version = "0.9", features = ["cookie"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres", "migrate", "uuid", "chrono"] }

# UUID and time
uuid = { version = "1.11", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# OpenAPI documentation
utoipa = { version = "5.2", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "8.0", features = ["axum"] }

# Temporal SDK
# TODO: Add squads-temporal-sdk once available

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
