# Decision: Use UUID v7 for time-ordered IDs (better for DB indexing, sortable by creation time)
# Decision: OpenAI as first LLM provider (most common, stable API)
# Decision: Auth via OAuth will be added later for dashboard login

[workspace]
resolver = "2"

members = [
    "crates/control-plane",
    "crates/worker",
    "crates/core",
    "crates/openai",
    "crates/anthropic",
    "crates/internal-protocol",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "MIT"
authors = ["Everruns Contributors"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.42", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"

# HTTP framework
axum = { version = "0.7", features = ["macros"] }
axum-extra = { version = "0.9", features = ["cookie"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "migrate", "uuid", "chrono"] }

# UUID and time
uuid = { version = "1.11", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Async traits
async-trait = "0.1"

# Environment
dotenvy = "0.15"

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# OpenTelemetry
opentelemetry = "0.28"
opentelemetry_sdk = { version = "0.28", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.28", features = ["grpc-tonic"] }
tracing-opentelemetry = "0.29"

# OpenAPI documentation
utoipa = { version = "5.2", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "8.0", features = ["axum"] }

# Encryption
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.22"

# Authentication
argon2 = "0.5"
jsonwebtoken = "9.3"
sha2 = "0.10"
hex = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
eventsource-stream = "0.2"
regex = "1.11"
time = "0.3"

# Temporal SDK (used when AGENT_RUNNER_MODE=temporal)
temporal-sdk-core = "0.1.0-alpha.1"
temporal-sdk-core-protos = "0.1.0-alpha.1"
prost = "0.13"
prost-types = "0.13"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
# Use thin LTO for faster builds while retaining most optimization benefits
# Full LTO (`lto = true`) provides ~5-10% smaller binaries but 2-5x slower link times
lto = "thin"
codegen-units = 16

# CI-optimized profile: faster builds, still optimized
[profile.release-ci]
inherits = "release"
lto = "thin"
codegen-units = 16
debug = false
strip = true
