[package]
name = "everruns-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Command-line interface for Everruns"

[[bin]]
name = "everruns"
path = "src/main.rs"

[dependencies]
# CLI
clap.workspace = true

# HTTP client
reqwest.workspace = true

# Async runtime
tokio.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true

# UUID and time
uuid.workspace = true
chrono.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true
