# Core Agent Abstractions
# Decision: Keep the loop logic DB-agnostic via traits (EventEmitter, MessageStore, ToolExecutor)
# Decision: Use async_trait for trait definitions to support async operations
# Decision: Tool types and domain entities are defined here (runtime types)
# Decision: Domain entities (Agent, Session, LlmProvider, etc.) are in core for shared use by API and worker
# Decision: Use OpenAI Protocol as the base for LLM Provider abstractions

[package]
name = "everruns-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Core agent abstractions for Everruns - agent loop, events, tools, LLM providers"

[dependencies]
# Core dependencies
anyhow.workspace = true
thiserror.workspace = true
async-trait.workspace = true

# Async runtime
tokio = { workspace = true, features = ["sync"] }
tokio-stream.workspace = true
futures.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# UUID and time
uuid.workspace = true
chrono.workspace = true

# Tracing
tracing.workspace = true

# Encoding
base64.workspace = true

# URL parsing
url = "2"

# OpenAPI schema generation (optional, enabled by everruns-control-plane)
utoipa = { workspace = true, optional = true }

# Note: This crate has NO dependency on storage/contracts - it's purely runtime abstractions
# Tool types are defined locally in this crate

# OpenAI Protocol provider
# Note: We need "default" features for system proxy detection from environment variables
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"] }
eventsource-stream = "0.2"

# LLM simulation for testing (optional)
llmsim = { git = "https://github.com/chaliy/llmsim.git", optional = true }

[features]
default = []
openapi = ["utoipa"]
llmsim = ["dep:llmsim"]

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
tracing-subscriber.workspace = true
wiremock = "0.6"
# Provider crates for examples (dev-only, not a runtime dependency)
everruns-openai = { path = "../openai" }
everruns-anthropic = { path = "../anthropic" }

[[example]]
name = "turn_based_execution"
path = "examples/turn_based_execution.rs"
