[package]
name = "everruns-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
# Forward temporal feature to worker crate for durable workflow execution
temporal = ["everruns-worker/temporal"]

[dependencies]
axum.workspace = true
axum-extra.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
futures.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
utoipa.workspace = true
utoipa-swagger-ui.workspace = true

everruns-contracts = { path = "../everruns-contracts" }
everruns-storage = { path = "../everruns-storage" }
everruns-worker = { path = "../everruns-worker" }

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
