[package]
name = "everruns-api"
version.workspace = true
edition.workspace = true
license.workspace = true
default-run = "everruns-api"

[[bin]]
name = "everruns-api"
path = "src/main.rs"

[[bin]]
name = "reencrypt-secrets"
path = "src/bin/reencrypt_secrets.rs"

[dependencies]
axum.workspace = true
axum-extra.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
futures.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
utoipa.workspace = true
utoipa-swagger-ui.workspace = true
sqlx.workspace = true
chrono.workspace = true
dotenvy.workspace = true
jsonwebtoken.workspace = true
rand.workspace = true
sha2.workspace = true
hex.workspace = true
base64.workspace = true
reqwest.workspace = true
time.workspace = true

everruns-contracts = { path = "../everruns-contracts" }
everruns-core = { path = "../everruns-core", features = ["openapi"] }
everruns-storage = { path = "../everruns-storage" }
everruns-worker = { path = "../everruns-worker" }

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
http-body-util = "0.1"
