# Core Agent Abstractions
# Decision: Keep the loop logic DB-agnostic via traits (EventEmitter, MessageStore, ToolExecutor)
# Decision: Use async_trait for trait definitions to support async operations
# Decision: Re-export AG-UI events from everruns-contracts for consistency
# Decision: Use OpenAI Protocol as the base for LLM Provider abstractions

[package]
name = "everruns-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Core agent abstractions for Everruns - agent loop, events, tools, LLM providers"

[dependencies]
# Core dependencies
anyhow.workspace = true
thiserror.workspace = true
async-trait.workspace = true

# Async runtime
tokio = { workspace = true, features = ["sync"] }
tokio-stream.workspace = true
futures.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# UUID and time
uuid.workspace = true
chrono.workspace = true

# Tracing
tracing.workspace = true

# Internal dependencies
everruns-contracts = { path = "../everruns-contracts" }

# OpenAI Protocol provider
reqwest = { version = "0.12", features = ["json", "stream"] }
eventsource-stream = "0.2"

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
tracing-subscriber.workspace = true

[[example]]
name = "tool_calling"
path = "examples/tool_calling.rs"

[[example]]
name = "capabilities"
path = "examples/capabilities.rs"

[[example]]
name = "simple_agent"
path = "examples/simple_agent.rs"

[[example]]
name = "decomposed_execution"
path = "examples/decomposed_execution.rs"
