[package]
name = "everruns-storage"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sqlx.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
anyhow.workspace = true
thiserror.workspace = true
aes-gcm.workspace = true
rand.workspace = true
base64.workspace = true
tracing.workspace = true

# Encryption
aes-gcm = "0.10"
base64 = "0.22"
rand = "0.8"

everruns-contracts = { path = "../everruns-contracts" }
