[package]
name = "everruns-storage"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sqlx.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
anyhow.workspace = true
thiserror.workspace = true
aes-gcm.workspace = true
rand.workspace = true
base64.workspace = true
tracing.workspace = true
argon2.workspace = true
sha2.workspace = true
hex.workspace = true
async-trait.workspace = true
regex.workspace = true

everruns-core = { path = "../everruns-core" }
