# Runtime Agent Execution Engine
# Decision: Contains atoms, capabilities, tools, LLM drivers - all execution logic
# Decision: Depends on schemas for type definitions
# Decision: DB-agnostic via traits (EventEmitter, MessageStore, ToolExecutor)

[package]
name = "everruns-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Agent execution engine for Everruns - atoms, capabilities, tools, LLM drivers"

[dependencies]
# Internal dependencies
everruns-schemas = { path = "../schemas" }

# Core dependencies
anyhow.workspace = true
thiserror.workspace = true
async-trait.workspace = true

# Async runtime
tokio = { workspace = true, features = ["sync"] }
tokio-stream.workspace = true
futures.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# UUID and time
uuid.workspace = true
chrono.workspace = true

# Tracing
tracing.workspace = true

# Encoding
base64.workspace = true

# URL parsing
url = "2"

# OpenAI Protocol provider
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"] }
eventsource-stream = "0.2"

# Regex for capabilities
regex.workspace = true

[features]
default = []

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
tracing-subscriber.workspace = true
wiremock = "0.6"
# Provider crates for examples
everruns-openai = { path = "../everruns-openai" }
everruns-anthropic = { path = "../everruns-anthropic" }
