[package]
name = "everruns-worker"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

everruns-core = { path = "../core" }
everruns-openai = { path = "../openai" }
everruns-anthropic = { path = "../anthropic" }
everruns-internal-protocol = { path = "../internal-protocol" }

chrono.workspace = true
async-trait.workspace = true
futures.workspace = true
reqwest.workspace = true
sha2 = "0.10"
hex = "0.4"
url = "2.5"

# Temporal SDK dependencies
temporal-sdk-core.workspace = true
temporal-sdk-core-protos.workspace = true
prost.workspace = true
prost-types.workspace = true
tonic = "0.12"


